# openscreen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  biome.json  ct2-build.cmd  electron-builder.json5  opencode.json  package-lock.json  package.json  vite.config.ts  vite.v4preview.config.ts  vitest.config.ts
.claude/: launch.json
.github/: pull_request_template.md
.github/scripts/: discord-bot-api.mjs  discord-bot-api.test.mjs  discord-pr-sync.mjs  discord-release-announce.mjs  discord-release-announce.test.mjs  discord-roadmap-sync.mjs  discord-thread-validator.mjs  discord-thread-validator.test.mjs  discord-weekly-leaderboard.mjs  release-milestone-close.mjs  release-milestone-migrate.mjs
.github/workflows/: aur-publish.yml  build-ctranslate2-server.yml  build-native-mac.yml  build-whisper-binaries.yml  build-whisper-stt.yml  build.yml  bump-nix-package.yml  ci.yml  diagnostic-artifact.yml  discord-pr-notify.yml  discord-roadmap-sync.yml  discord-weekly-leaderboard.yml  discord.yaml  docs.yml  merged-pr-bookkeeping.yml  prerelease.yml  promote.yml  temp-discord-announce.yml  update-homebrew-cask.yml
.harness/: agent.md
.harness/docs/: architecture-overview.md  git-workflow.md
.harness/hooks/: post-commit.md  pre-commit.md
.harness/memory/: MEMORY.md
.worktrees/wt-9ce78f24/: HANDOFF.md
design/: DESIGN.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  editor.html  index.html  openscreen-editor-2.html  openscreen-editor-v2.html  openscreen-editor.html  openscreen-landing.html  openscreen-widget.html  readme.md  styles.css
design/guidelines/: brand-elevation.card.html  brand-logo.card.html  brand-motion.card.html  brand-radii.card.html  colors-brand.card.html  colors-semantic.card.html  colors-surfaces.card.html  colors-text.card.html  spacing-scale.card.html  type-families.card.html  type-reading.card.html  type-scale.card.html
design/tokens/: base.css  colors.css  effects.css  elevation.css  fonts.css  radii.css  spacing.css  typography.css  v4.css
docs/: axcut-ux-ui-spec.md  cursor-feature-inventory.md  github-actions-workflows.md  openscreen-ux-ui-spec.md  provider-parity-plan.md  secrets.md
docs/ai-edition/: v4-design-parity.md
docs/architecture/: ai-edition-collision-analysis.md  ai-edition-comprehensive-handover.md  ai-edition-data-flow.md  ai-edition-handover.md  ai-edition-merge-plan.md  ai-edition-roadmap.md  axcut-inventory.md  export-native-encode-measurement.md  export-pipeline-v2-spec.md  export-pipeline.md  native-core-tauri-spec.md  openscreen-inventory.md  rendering-architecture.md  timeline-coordinate-refactor.md
docs/engineering/: macos-native-recorder-roadmap.md  stt-ctranslate2-implementation-status.md  stt-ctranslate2-migration.md  stt-spec.md  stt-whispercpp-dtw-poc-plan.md  stt-whispercpp-migration-plan.md  transcription-engine-migration.md  windows-native-recorder-roadmap.md
docs/testing/: rc-e2e-checklist.md
electron/: electron-env.d.ts  hudOverlayBounds.test.ts  hudOverlayBounds.ts  hudOverlayDrag.test.ts  hudOverlayDrag.ts  hudOverlayMousePolicy.test.ts  hudOverlayMousePolicy.ts  main-process-errors.test.ts  main-process-errors.ts  main.ts  preload.ts  singleInstanceLock.test.ts  singleInstanceLock.ts  windows.ts
electron/ai-edition/: agent-provider-capabilities.test.ts  agent-provider-capabilities.ts  agent-tools.test.ts  agent-tools.ts  chat-compaction.test.ts  chat-compaction.ts  chat-service.test.ts  chat-service.toolloop.test.ts  chat-service.ts  codex-session.test.ts  codex-session.ts  document-service.test.ts  document-service.ts  llm-call.ts  llm-config-store.ts  llm-provider-auth.test.ts  llm-provider-auth.ts  provider-registry.ts
electron/diagnostics/: main-log-buffer.test.ts  main-log-buffer.ts
electron/ipc/: handlers.ts  nativeBridge.ts
electron/media/: ffmpegCapabilities.test.ts  ffmpegCapabilities.ts  (+6 more)
electron/native/ctranslate2-server/: CMakeLists.txt  README.md
electron/native/ctranslate2-server/include/: mel.h  tokenizer.h  wav.h
electron/native/ctranslate2-server/src/: main.cpp  mel.cpp
electron/native/whisper-stt/: CMakeLists.txt
electron/native/whisper-stt/src/: main.cpp
nix/: package.nix
poc/: composite.wgsl  index.html  main.js  vite.config.js
poc-d3d/: .gitignore  Cargo.toml  HANDOFF.md  README.md  build.rs  shim.c  wrapper.h  x.bat
poc-d3d/.cargo/: config.toml
poc-d3d/compositor-view-napi/: Cargo.toml  build.rs
poc-d3d/compositor-view-napi/src/: lib.rs
poc-d3d/docs/: S0-frameworks.md  S1-sources.md  S2-c0.md  S6-report.md  S7-preview-export.md  S8-electron-integration.md  d3d-migration.md
poc-d3d/fixture/: fixture.json
poc-d3d/spikes/: build_nv12.bat  build_run_d2d.bat  d2d_probe.cpp  nv12_probe.cpp
poc-d3d/src/: app.rs  audio.rs  compositor.rs  config.rs  cursor.rs  d3d.rs  ffi.rs  lib.rs  live.rs  main.rs  pipeline.rs  regions.rs  scene.rs  shaders.hlsl
poc-d3d/tests/: output_geometry_golden.rs
poc-native/: .gitignore  Cargo.toml
poc-native/src/: composite.wgsl  main.rs
scripts/: bench-export.mjs  build-ctranslate2-server.sh  build-macos-screencapturekit-helper.mjs  build-whisper-binaries.sh  build-whisper-stt.sh  build-windows-compositor-addon.mjs  build-windows-wgc-helper.mjs  configure-ct2-build.ps1  e2e-pipeline-smoke.mjs  e2e-stt-smoke.mjs  fetch-ffmpeg.mjs  fetch-vad-model.ps1  fetch-vad-model.sh  start-ct2-server.cmd  stt-dev-server.mjs  stt-wrapper.bat  test-windows-wgc-helper.mjs  windows-helper-arch.mjs  windows-helper-arch.test.mjs
specs/: f2.6-region-snap-guide-and-tooltip.md  f2.7-multi-select-regions.md  p1.7-chat-tool-call-summaries.md  p3.1-asset-file-size.md  p3.3-right-panes-help.md  p3.7-ruler-hover-scrub.md  t19-zoom-timeline-and-preview.md
src/: App.tsx  index.css  main.tsx
tools/stt-eval/whispercpp-dtw-poc/harness/: CMakeLists.txt  analyze.mjs  debug_jfk.mjs  extract_text.mjs  run_ct2.mjs  run_wcpp.mjs  score_all.mjs  wcpp_dtw_bench.cpp  wer.mjs
website/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  postcss.config.cjs  sidebars.ts  tsconfig.json
(+477 files in other folders)
